# shard

./: .gitignore  Cargo.toml  LICENSE-MIT  rustfmt.toml
.github/workflows/: ci.yml
benches/: lexer.rs  parser.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
src/: main.rs
testfiles/: bench-base.sr  main.sr  parser.sr
