[package]
name = "shard"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.bench]
debug = true

[dependencies]
lexer = { path = "crates/lexer", package = "shard-lexer" }

[dev-dependencies]
criterion = "0.4.0"

[workspace]
members = [
  "crates/*"
]

[[bench]]
name = "lexer"
harness = false
